--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>React App</title>
   </head>
+  <style>
+  body{ 
+    background: url(/img/mario-bg.png) no-repeat;
+    background-size: 100%;
+    background-position: bottom;
+    background-color: #95e8f3;
+    min-height: 100%;
+  }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
